# web-search

./: .gitignore  Cargo.toml  README.md  plugin.toml  plugin.wasm
.github/workflows/: ci.yml
src/: bindings.rs  lib.rs
wit/: grain-plugin.wit
