[package]
name = "web-search-plugin"
version = "0.0.1-beta2"
edition = "2024"
description = "Multi-provider web search (Exa / Tavily / SearXNG) + URL fetch as a grain WASM plugin"
license = "MIT OR Apache-2.0"
repository = "https://github.com/grain-ai/web-search"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[package.metadata.component]
package = "grain:web-search-plugin"

[package.metadata.component.target]
world = "grain-plugin"
path = "wit"

# Keep the wasm small.
[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
